# learning-networks

./: Cargo.toml  compare_emulator.py  compare_generator.py  emulator.ot  generator.ot  index.html  php.ini  plot.py  plot_gen_suite.py  plot_single.py  plot_suite.py
docs/: CNAME  index.html  site-13cb7db0e58a864.js  site-13cb7db0e58a864_bg.wasm  site-39d57a7e9ceae30f.js  site-6abc6999591991ed.js  site-6abc6999591991ed_bg.wasm  site-8cea5cb2f8d6cb2.js
minimal_ml/: Cargo.toml  Procfile  index.html
minimal_ml/docs/: index.html  minimal_ml_bg.wasm
minimal_ml/site/: main.rs  post.txt
minimal_ml/src/: lib.rs  linear.rs  post.txt  site.rs  utils.rs
minimal_ml/tests/: emulator.rs
src/: burn_lib.rs  lib.rs
