[workspace]
members = [
    "./",
    "./minimal_ml/",
]

[package]
name = "fabricator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
plotly = { version = "0.7.0", features = ["kaleido"] }
tch = "0.8.0"
rand = "0.8"
indicatif = "0.17.1"
egui = "0.19.0"
eframe = "0.19.0"
statrs = "0.16.0"
#burn = "0.2.3"
serde = "1.0.147"
serde_cbor = { version = "0.11.2", features = ["std"] }


[[bin]]
name = "emulator_factory"
test = false
harness = false

[[bin]]
name = "emulator_suite"
test = false
harness = false

[[bin]]
name = "emulator_demo"
test = false
harness = false

[[bin]]
name = "generator_factory"
test = false
harness = false

[[bin]]
name = "generator_suite"
test = false
harness = false

[[bin]]
name = "generator_demo"
test = false
harness = false
