[package]
name = "minimal_ml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0.147", features = ["serde_derive"] }
serde_cbor = "0.11.2"
egui = "0.19.0"
eframe = "0.19.0"
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }

[dev-dependencies]
plotly = { version = "0.7.0", features = ["kaleido"] }


[[bin]]
name = "site"
path = "site/main.rs"
