[package]
name = "minimal_ml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.147", features = ["serde_derive"] }
serde_cbor = "0.11.2"
egui = "0.19.0"
eframe = { version = "0.19.0", features = ["persistence"] }
rand = "0.8.5"

[dev-dependencies]
plotly = { version = "0.7.0", features = ["kaleido"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"

[[bin]]
name = "site"
path = "site/main.rs"
